--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -70,7 +70,7 @@
 <div class="row">
 <div class="col-sm-4">
 <div class="card h-100">
-<img class="card-img-top h-50" src="C:\Users\moham\Downloads\kongskullisland.jpg" style="object-fit: cover" alt="Kong Skull Island image"> <div class="card-body">
+<img class="card-img-top h-50" src="https://github.com/mahk3727/HTML-and-CSS-Projects/blob/main/kongskullisland.jpg" style="object-fit: cover" alt="Kong Skull Island image"> <div class="card-body">
 <h5 class="card-title">Kong: Skull Island</h5>
 <p class="card-text">A team of scientists explore an uncharted island in the Pacific, venturing into the domain of the mighty Kong, and must fight to escape a primal Eden.</p>
 <h6>
@@ -78,14 +78,14 @@
 </h6> </div> </div> </div>
 <div class="col-sm-4">
 <div class="card h-100">
-<img class="card-img-top h-50" src="C:\Users\moham\Downloads\ghostintheshell.jpg" style="object-fit: cover" alt="Ghost in the Shell image"> <div class="card-body">
+<img class="card-img-top h-50" src="https://github.com/mahk3727/HTML-and-CSS-Projects/blob/main/ghostintheshell.jpg" style="object-fit: cover" alt="Ghost in the Shell image"> <div class="card-body">
 <h5 class="card-title">Ghost in the Shell</h5>
 <p class="card-text">In the near future, Major Mila Killian is the first of her kind: A human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.</p> <h6>
 <span class="badge badge-secondary bg-info text-light">1:00pm</span> <span class="badge badge-secondary bg-info text-light">3:00pm</span> <span class="badge badge-secondary bg-info text-light">5:30pm</span> <span class="badge badge-secondary bg-info text-light">7:00pm</span> <span class="badge badge-secondary bg-info text-light">9:00pm</span>
 </h6> </div> </div> </div>
 <div class="col-sm-4">
 <div class="card h-100">
-<img class="card-img-top h-50" src="C:\Users\moham\Downloads\beautyandthebeast.jpg" style="object-fit: cover" alt="Beauty and the Beast image"> <div class="card-body">
+<img class="card-img-top h-50" src="https://github.com/mahk3727/HTML-and-CSS-Projects/blob/main/beautyandthebeast.jpg" style="object-fit: cover" alt="Beauty and the Beast image"> <div class="card-body">
 <h5 class="card-title">Beauty and the Beast</h5>
 <p class="card-text">A selfish prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a beautiful young woman, he keeps prisoner.</p>
 <h6>
