--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Academy Cinemas</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFNGE8 fJT3GXWEOngsV7Zt27NXFoaoApmYm81iuXoPKFOJwJ8ERdknLPMO" cross origin="anonymous">
+# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFNGE8 fJT3GXWEOngsV7Zt27NXFoaoApmYm81iuXoPKFOJwJ8ERdknLPMO" cross origin="anonymous">
 </head>
 <body>
 <div class="container">
@@ -124,6 +124,6 @@
 <!--/footer -->
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@ 4.1.3/dist/js/bootstrap.min.js"
-integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2 IMqE241rYiqJxyMiZ60W/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+# integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2 IMqE241rYiqJxyMiZ60W/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
