--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -3,17 +3,17 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">                                                             
 <title>Academy Cinemas</title>
-# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFNGE8 fJT3GXWEOngsV7Zt27NXFoaoApmYm81iuXoPKFOJwJ8ERdknLPMO" cross origin="anonymous">
+// <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFNGE8 fJT3GXWEOngsV7Zt27NXFoaoApmYm81iuXoPKFOJwJ8ERdknLPMO" cross origin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container">                 
 <!-- navbar -->
 <nav class="navbar sticky-top navbar-expand-lg bg-info">
 <div class="container-fluid">
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">                                  
 <li class="nav-item active">
 <a class="nav-link text-light" href="#about">About</a>
 </li>
@@ -124,6 +124,6 @@
 <!--/footer -->
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@ 4.1.3/dist/js/bootstrap.min.js"
-# integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2 IMqE241rYiqJxyMiZ60W/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+// integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2 IMqE241rYiqJxyMiZ60W/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
